--- a/index.html
+++ b/index.html
@@ -23,15 +23,4 @@
       line-height: 1.3;
     }
     .result { margin: 1.5em 0; }
-    .color-block span { display: inline-block; }
-  </style>
-</head>
-<body>
-  <h1>色ゆらぎグラデーションジェネレーター</h1>
-  <label>中心色 (R): <input id="r" type="number" min="0" max="255" value="178"></label>
-  <label>G: <input id="g" type="number" min="0" max="255" value="53"></label>
-  <label>B: <input id="b" type="number" min="0" max="255" value="231"></label>
-  <br>
-  <label>ゆらぎ幅（±）: <input id="range" type="number" min="1" max="64" value="16"></label>
-  <label>生成数: <input id="num" type="number" min="2" max="20" value="5"></label>
-  <button onclick
+    .color-block
