--- a/index.html
+++ b/index.html
@@ -8,22 +8,14 @@
     input[type="number"] { width: 60px; }
     .color-block {
       display: inline-block;
-      width: 120px;
-      height: 60px;
-      margin: 6px;
+      width: 80px;
+      height: 40px;
+      margin: 4px;
       border-radius: 6px;
       border: 1px solid #aaa;
       vertical-align: middle;
-      padding: 8px;
-      color: #222;
-      background: #fff;
-      box-sizing: border-box;
-      text-align: left;
-      font-size: 0.95em;
-      line-height: 1.3;
     }
     .result { margin: 1.5em 0; }
-    .color-block span { display: inline-block; }
   </style>
 </head>
 <body>
@@ -50,6 +42,7 @@
     }
 
     function generate() {
+      // id属性のあるinputから値取得
       let r = document.getElementById("r").value;
       let g = document.getElementById("g").value;
       let b = document.getElementById("b").value;
@@ -71,11 +64,7 @@
       }
 
       let colorBlocks = colors.map(rgb =>
-        `<div class="color-block" style="background:${rgbToHex(...rgb)};color:${getTextColor(rgb)};" title="rgb(${rgb.join(",")})">
-          <span><b>HEX：</b>${rgbToHex(...rgb)}</span><br>
-          <span><b>RGB：</b>rgb(${rgb.join(",")})</span><br>
-          <span><b>数値：</b>(${rgb.join(",")})</span>
-        </div>`
+        `<div class="color-block" style="background:${rgbToHex(...rgb)}" title="rgb(${rgb.join(",")})">${rgbToHex(...rgb)}</div>`
       ).join("");
       document.getElementById("colors").innerHTML = colorBlocks;
 
@@ -84,12 +73,6 @@
       let cssCode = `background: linear-gradient(90deg, ${gradStr});`;
       document.getElementById("css").innerHTML =
         `<b>CSSグラデーション例：</b><br><code>${cssCode}</code>`;
-    }
-
-    // 明度次第で見やすいテキスト色を選択
-    function getTextColor(rgb) {
-      let brightness = (rgb[0]*299 + rgb[1]*587 + rgb[2]*114) / 1000;
-      return brightness < 128 ? "#fff" : "#222";
     }
   </script>
 </body>
